--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 		<title> Hello Isaac!</title>
 	</head>
 	<body>
-	<h1> Hello Isaac!</h1>
+	<h1> Hello Isaac!Looking forward to learning more.</h1>
 	</body>
 	</html>
